Modify plugin configurations in pom.xml
Updated javafx-maven-plugin configuration and added jpackage-maven-plugin settings.